--- a/Tema 2/MetodosNoSupervisados_NotebookTarea2.ipynb
+++ b/Tema 2/MetodosNoSupervisados_NotebookTarea2.ipynb
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 92,
       "metadata": {
         "id": "RcszE7CjRB_A"
       },
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 93,
       "metadata": {
         "id": "hGvCA_XbUFDN"
       },
@@ -105,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 94,
       "metadata": {
         "id": "g6LMgb0YUurd"
       },
@@ -126,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 95,
       "metadata": {
         "id": "dEr4nj8iVeY7"
       },
@@ -155,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 96,
       "metadata": {
         "id": "q0wx5QJiikYu"
       },
@@ -194,7 +194,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 97,
       "metadata": {
         "id": "fsNJYm6Ujtqc"
       },
@@ -223,7 +223,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 98,
       "metadata": {
         "id": "P-DmyZvej7JZ"
       },
@@ -254,7 +254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 99,
       "metadata": {
         "id": "2gbjpA6HmABc"
       },
@@ -289,7 +289,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 100,
       "metadata": {
         "id": "wSXsUXZMm1ra"
       },
@@ -318,7 +318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 101,
       "metadata": {
         "id": "EimWUKIgm_Xv"
       },
@@ -329,7 +329,7 @@
               "0.29814239699997197"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 101,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -365,7 +365,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 102,
       "metadata": {
         "id": "Nq9NN3tIdSmO"
       },
@@ -396,7 +396,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 103,
       "metadata": {
         "id": "iUfvVuxtupKn"
       },
@@ -438,7 +438,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 104,
       "metadata": {
         "id": "lliNhfTLy7-i"
       },
@@ -474,7 +474,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 105,
       "metadata": {
         "id": "zG2kxWwUeacj"
       },
@@ -503,13 +503,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 106,
       "metadata": {
         "id": "LRmWrq8le5Hg"
       },
       "outputs": [],
       "source": [
         "def bss(datos:list, particion:int):\n",
+        "  # COMPLETAR\n",
+        "  \n",
         "  bss_sum = 0\n",
         "\n",
         "  groups = np.unique(particion)\n",
@@ -546,7 +548,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 107,
       "metadata": {
         "id": "9wYtgRGrgCOP"
       },
@@ -577,7 +579,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 108,
       "metadata": {
         "id": "PiFDtVv6goEL"
       },
@@ -606,7 +608,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 109,
       "metadata": {
         "id": "27wAy4R68VAN"
       },
@@ -615,14 +617,21 @@
         "def silhouette_punto(punto:float, datos:list, particion:int, indice:int):\n",
         "  # COMPLETAR\n",
         "\n",
+        "  # Calculamos a\n",
+        "\n",
         "  # Recogemos los indices de los puntos del mismo cluster que el punto dado\n",
         "  points_grp = [i for i,x in enumerate(particion) if x == particion[indice]]\n",
         "\n",
         "  # Seleccionamos los puntos\n",
         "  data_grp = list(np.array(datos)[points_grp])\n",
         "\n",
+        "  # Eliminamos del grupo el punto\n",
+        "  data_grp = [x for x in data_grp if not (x == punto).all()]\n",
+        "\n",
         "  # Calculamos la distancia del punto a todos los puntos del mismo grupo\n",
         "  a = distancia_punto_grupo(punto, data_grp)\n",
+        "\n",
+        "  # Calculamos b\n",
         "\n",
         "  # Calculamos la distancia al resto de grupos\n",
         "  groups = list(np.unique(particion))\n",
@@ -641,7 +650,7 @@
         "    # Insertamos la distancia del punto al grupo que no pertenece\n",
         "    b.append(distancia_punto_grupo(punto, data_not_grp))\n",
         "\n",
-        "  # Devolvemos el valor usando el valor mínimo de b, ya que es la distancia al grupo más cercano\n",
+        "  # # Devolvemos el valor usando el valor mínimo de b, ya que es la distancia al grupo más cercano\n",
         "  return (min(b)-a) / max(a, min(b))"
       ]
     },
@@ -656,7 +665,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 110,
       "metadata": {
         "id": "1hoR3iao8Zn3"
       },
@@ -685,7 +694,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 111,
       "metadata": {
         "id": "OY6_9Dn_8eQt"
       },
@@ -694,7 +703,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "0.14789914075897975\n",
+            "-0.12527718550104788\n",
             "-0.12527718550104788\n"
           ]
         }
@@ -706,7 +715,7 @@
         "\n",
         "print(silhoutte_particion(datos, particion))\n",
         "\n",
-        "print(silhouette_score(datos, particion, metric=\"euclidean\", random_state=0))"
+        "print(silhouette_score(datos, particion))"
       ]
     },
     {
@@ -737,7 +746,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.9"
+      "version": "3.9.5"
     }
   },
   "nbformat": 4,
