--- a/Tema 3/MetodosNoSupervisados_NotebookTarea3.ipynb
+++ b/Tema 3/MetodosNoSupervisados_NotebookTarea3.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "MetodosNoSupervisados-NotebookTarea3.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -54,14 +38,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
       "metadata": {
         "id": "2fhR1bgYrjqb"
       },
+      "outputs": [],
       "source": [
-        "#COMPLETAR"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "#COMPLETAR\n",
+        "from sklearn.datasets import load_wine\n",
+        "import pandas as pd"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -81,14 +67,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
       "metadata": {
         "id": "a86vFoXhvcEQ"
       },
+      "outputs": [],
       "source": [
-        "#COMPLETAR"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "#COMPLETAR\n",
+        "data = load_wine()"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -101,34 +88,291 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 15,
       "metadata": {
         "id": "2PTlF-EG58gB"
       },
-      "source": [
-        "#COMPLETAR"
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "alcohol                         0\n",
+            "malic_acid                      0\n",
+            "ash                             0\n",
+            "alcalinity_of_ash               0\n",
+            "magnesium                       0\n",
+            "total_phenols                   0\n",
+            "flavanoids                      0\n",
+            "nonflavanoid_phenols            0\n",
+            "proanthocyanins                 0\n",
+            "color_intensity                 0\n",
+            "hue                             0\n",
+            "od280/od315_of_diluted_wines    0\n",
+            "proline                         0\n",
+            "class                           0\n",
+            "dtype: int64\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>count</th>\n",
+              "      <th>mean</th>\n",
+              "      <th>std</th>\n",
+              "      <th>min</th>\n",
+              "      <th>25%</th>\n",
+              "      <th>50%</th>\n",
+              "      <th>75%</th>\n",
+              "      <th>max</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>alcohol</th>\n",
+              "      <td>178.0</td>\n",
+              "      <td>13.000618</td>\n",
+              "      <td>0.811827</td>\n",
+              "      <td>11.03</td>\n",
+              "      <td>12.3625</td>\n",
+              "      <td>13.050</td>\n",
+              "      <td>13.6775</td>\n",
+              "      <td>14.83</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>malic_acid</th>\n",
+              "      <td>178.0</td>\n",
+              "      <td>2.336348</td>\n",
+              "      <td>1.117146</td>\n",
+              "      <td>0.74</td>\n",
+              "      <td>1.6025</td>\n",
+              "      <td>1.865</td>\n",
+              "      <td>3.0825</td>\n",
+              "      <td>5.80</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>ash</th>\n",
+              "      <td>178.0</td>\n",
+              "      <td>2.366517</td>\n",
+              "      <td>0.274344</td>\n",
+              "      <td>1.36</td>\n",
+              "      <td>2.2100</td>\n",
+              "      <td>2.360</td>\n",
+              "      <td>2.5575</td>\n",
+              "      <td>3.23</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>alcalinity_of_ash</th>\n",
+              "      <td>178.0</td>\n",
+              "      <td>19.494944</td>\n",
+              "      <td>3.339564</td>\n",
+              "      <td>10.60</td>\n",
+              "      <td>17.2000</td>\n",
+              "      <td>19.500</td>\n",
+              "      <td>21.5000</td>\n",
+              "      <td>30.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>magnesium</th>\n",
+              "      <td>178.0</td>\n",
+              "      <td>99.741573</td>\n",
+              "      <td>14.282484</td>\n",
+              "      <td>70.00</td>\n",
+              "      <td>88.0000</td>\n",
+              "      <td>98.000</td>\n",
+              "      <td>107.0000</td>\n",
+              "      <td>162.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>total_phenols</th>\n",
+              "      <td>178.0</td>\n",
+              "      <td>2.295112</td>\n",
+              "      <td>0.625851</td>\n",
+              "      <td>0.98</td>\n",
+              "      <td>1.7425</td>\n",
+              "      <td>2.355</td>\n",
+              "      <td>2.8000</td>\n",
+              "      <td>3.88</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>flavanoids</th>\n",
+              "      <td>178.0</td>\n",
+              "      <td>2.029270</td>\n",
+              "      <td>0.998859</td>\n",
+              "      <td>0.34</td>\n",
+              "      <td>1.2050</td>\n",
+              "      <td>2.135</td>\n",
+              "      <td>2.8750</td>\n",
+              "      <td>5.08</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>nonflavanoid_phenols</th>\n",
+              "      <td>178.0</td>\n",
+              "      <td>0.361854</td>\n",
+              "      <td>0.124453</td>\n",
+              "      <td>0.13</td>\n",
+              "      <td>0.2700</td>\n",
+              "      <td>0.340</td>\n",
+              "      <td>0.4375</td>\n",
+              "      <td>0.66</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>proanthocyanins</th>\n",
+              "      <td>178.0</td>\n",
+              "      <td>1.590899</td>\n",
+              "      <td>0.572359</td>\n",
+              "      <td>0.41</td>\n",
+              "      <td>1.2500</td>\n",
+              "      <td>1.555</td>\n",
+              "      <td>1.9500</td>\n",
+              "      <td>3.58</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>color_intensity</th>\n",
+              "      <td>178.0</td>\n",
+              "      <td>5.058090</td>\n",
+              "      <td>2.318286</td>\n",
+              "      <td>1.28</td>\n",
+              "      <td>3.2200</td>\n",
+              "      <td>4.690</td>\n",
+              "      <td>6.2000</td>\n",
+              "      <td>13.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>hue</th>\n",
+              "      <td>178.0</td>\n",
+              "      <td>0.957449</td>\n",
+              "      <td>0.228572</td>\n",
+              "      <td>0.48</td>\n",
+              "      <td>0.7825</td>\n",
+              "      <td>0.965</td>\n",
+              "      <td>1.1200</td>\n",
+              "      <td>1.71</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>od280/od315_of_diluted_wines</th>\n",
+              "      <td>178.0</td>\n",
+              "      <td>2.611685</td>\n",
+              "      <td>0.709990</td>\n",
+              "      <td>1.27</td>\n",
+              "      <td>1.9375</td>\n",
+              "      <td>2.780</td>\n",
+              "      <td>3.1700</td>\n",
+              "      <td>4.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>proline</th>\n",
+              "      <td>178.0</td>\n",
+              "      <td>746.893258</td>\n",
+              "      <td>314.907474</td>\n",
+              "      <td>278.00</td>\n",
+              "      <td>500.5000</td>\n",
+              "      <td>673.500</td>\n",
+              "      <td>985.0000</td>\n",
+              "      <td>1680.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>class</th>\n",
+              "      <td>178.0</td>\n",
+              "      <td>0.938202</td>\n",
+              "      <td>0.775035</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>0.0000</td>\n",
+              "      <td>1.000</td>\n",
+              "      <td>2.0000</td>\n",
+              "      <td>2.00</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                              count        mean         std     min       25%  \\\n",
+              "alcohol                       178.0   13.000618    0.811827   11.03   12.3625   \n",
+              "malic_acid                    178.0    2.336348    1.117146    0.74    1.6025   \n",
+              "ash                           178.0    2.366517    0.274344    1.36    2.2100   \n",
+              "alcalinity_of_ash             178.0   19.494944    3.339564   10.60   17.2000   \n",
+              "magnesium                     178.0   99.741573   14.282484   70.00   88.0000   \n",
+              "total_phenols                 178.0    2.295112    0.625851    0.98    1.7425   \n",
+              "flavanoids                    178.0    2.029270    0.998859    0.34    1.2050   \n",
+              "nonflavanoid_phenols          178.0    0.361854    0.124453    0.13    0.2700   \n",
+              "proanthocyanins               178.0    1.590899    0.572359    0.41    1.2500   \n",
+              "color_intensity               178.0    5.058090    2.318286    1.28    3.2200   \n",
+              "hue                           178.0    0.957449    0.228572    0.48    0.7825   \n",
+              "od280/od315_of_diluted_wines  178.0    2.611685    0.709990    1.27    1.9375   \n",
+              "proline                       178.0  746.893258  314.907474  278.00  500.5000   \n",
+              "class                         178.0    0.938202    0.775035    0.00    0.0000   \n",
+              "\n",
+              "                                  50%       75%      max  \n",
+              "alcohol                        13.050   13.6775    14.83  \n",
+              "malic_acid                      1.865    3.0825     5.80  \n",
+              "ash                             2.360    2.5575     3.23  \n",
+              "alcalinity_of_ash              19.500   21.5000    30.00  \n",
+              "magnesium                      98.000  107.0000   162.00  \n",
+              "total_phenols                   2.355    2.8000     3.88  \n",
+              "flavanoids                      2.135    2.8750     5.08  \n",
+              "nonflavanoid_phenols            0.340    0.4375     0.66  \n",
+              "proanthocyanins                 1.555    1.9500     3.58  \n",
+              "color_intensity                 4.690    6.2000    13.00  \n",
+              "hue                             0.965    1.1200     1.71  \n",
+              "od280/od315_of_diluted_wines    2.780    3.1700     4.00  \n",
+              "proline                       673.500  985.0000  1680.00  \n",
+              "class                           1.000    2.0000     2.00  "
+            ]
+          },
+          "execution_count": 15,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
       ],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "#COMPLETAR\n",
+        "wine_data = pd.DataFrame(data.data, columns = data.feature_names)\n",
+        "\n",
+        "wine_data[\"class\"] = data.target\n",
+        "\n",
+        "print(wine_data.isnull().sum())\n",
+        "\n",
+        "wine_data.describe().T"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Paso 1.4: Selecciona dos características para llevar a cabo el agrupamiento, y muestra la distribución de los puntos con alguna gráfica."
-      ],
       "metadata": {
         "id": "L_fyOcV0l87H"
-      }
+      },
+      "source": [
+        "Paso 1.4: Selecciona dos características para llevar a cabo el agrupamiento, y muestra la distribución de los puntos con alguna gráfica."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "xtct2pZjpT5R"
       },
+      "outputs": [],
       "source": [
         "#COMPLETAR"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -141,14 +385,14 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "#COMPLETAR"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "ph_mid9MmK9V"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#COMPLETAR"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -171,54 +415,54 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "ak23fq7urGqm"
       },
+      "outputs": [],
       "source": [
         "#COMPLETAR"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Paso 2.2: Ejecuta el primer método de agrupamiento."
-      ],
       "metadata": {
         "id": "CIaZ9NcpnDE2"
-      }
+      },
+      "source": [
+        "Paso 2.2: Ejecuta el primer método de agrupamiento."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#COMPLETAR"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "qD9Oa6cfnBQN"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#COMPLETAR"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Paso 2.3: Especifica los parámetros del segundo método de agrupamiento. Preferentemente, utiliza uno de una familia diferente al anterior."
-      ],
       "metadata": {
         "id": "GkpSmY83nPFc"
-      }
+      },
+      "source": [
+        "Paso 2.3: Especifica los parámetros del segundo método de agrupamiento. Preferentemente, utiliza uno de una familia diferente al anterior."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#COMPLETAR"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "aLp9HjSknPek"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#COMPLETAR"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -231,14 +475,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "yXetIREtrxfQ"
       },
+      "outputs": [],
       "source": [
         "#COMPLETAR"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -269,14 +513,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "y2MKrwEI24YP"
       },
+      "outputs": [],
       "source": [
         "#COMPLETAR"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -289,14 +533,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "Ibz5RsBbUHI2"
       },
+      "outputs": [],
       "source": [
         "#COMPLETAR"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -309,34 +553,34 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "JNhJBjgmefxR"
       },
+      "outputs": [],
       "source": [
         "#COMPLETAR"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Paso 3.4: Utiliza el atributo de clase como partición de referencia y calcula al menos una medida de validación externa. Importante: Ten en cuenta que el orden de las etiquetas generadas por el método de agrupamiento podría no coincidir con el orden de las etiquetas reales. Es decir, debes comprobar que los puntos de una misma clase están agrupados juntos, con independencia del valor concreto de la etiqueta en la partición real y en la obtenida."
-      ],
       "metadata": {
         "id": "TEtC-IcJoVRh"
-      }
+      },
+      "source": [
+        "Paso 3.4: Utiliza el atributo de clase como partición de referencia y calcula al menos una medida de validación externa. Importante: Ten en cuenta que el orden de las etiquetas generadas por el método de agrupamiento podría no coincidir con el orden de las etiquetas reales. Es decir, debes comprobar que los puntos de una misma clase están agrupados juntos, con independencia del valor concreto de la etiqueta en la partición real y en la obtenida."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#COMPLETAR"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "8SD8Q9JrofvW"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#COMPLETAR"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -347,5 +591,30 @@
         "*Añade aquí una breve explicación de los resultados obtenidos en el apartado 3.*"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "MetodosNoSupervisados-NotebookTarea3.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.5"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
